option to hide text

--- a/main.ipynb
+++ b/main.ipynb
@@ -34,6 +34,27 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<details>\n",
+    "    <summary>Опціонально: натисніть для інструкції з <strong>автоматичної очистки виводу на екран</strong></summary>\n",
+    "\n",
+    "    - виведіть консоль вашого браузера; зазвичай, вона викликається клавішею F12\n",
+    "    - переконайтесь, що фокус стоїть на вкладці Console\n",
+    "    - скопіюйте текст нижче, вставте його у поле вводу після > та мигаючого | i нажміть ентер:\n",
+    "    function ClearOutput(){ document.querySelector(\"iron-icon[command = 'clear-focused-or-selected-outputs']\").click() } setInterval(ClearOutput,300000)\n",
+    "    - кожні 5 хвилин вивід результатів буде очищено; консоль браузера можна закривати\n",
+    "\n",
+    "</details>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ]
 }
